13.20 Fix a bug with the manga catalog, if the word is too big, it doesn't translate. 13.21 Make an adaptation of the manga list. 	1) The manga list + 	2) charts, similar, linked in manga-details + 	3) Hide or do something with left-block when compressed + 13.22 Add an “all” option for manga status, age rating +

--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -85,7 +85,7 @@ footer {
 .nav-column ul li a:hover {
     color: white;
 }
-@media (max-width: 768px) {
+@media (max-width: 815px) {
     .footer-content {
         flex-direction: column;
         align-items: center;
